<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shortcutHome"
        android:title="@string/home"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_home_state"/>

    <item
        android:id="@+id/shortcutCategory"
        android:title="@string/category"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_category_state"/>



    <item
        android:id="@+id/shortcutCart"
        android:title="@string/cart"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_cart_state"/>

    <item
        android:id="@+id/shortcutPersonality"
        android:title="@string/personality"
        app:labelVisibilityMode="unlabeled"
        android:icon="@drawable/shortcut_personality_state"/>
</menu>