<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderInformationLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_order_content_recycler_view"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- order id -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/order_identifier"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/orderInformationID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_order_id"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- placed order date -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/placed_order_date"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/orderInformationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_placed_order_date"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />



    </LinearLayout>

    <!-- order status -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/status"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/orderInformationStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- total -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/total_amount"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/orderInformationTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_default_price"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/orderInformationButtonWatchOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_button_order_information"
            android:padding="10dp"
            android:text="@string/watch_order"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:textSize="12sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/orderInformationButtonBuyCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_button_remove_order_information"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/colorRed"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>